# spbau-opencl-homework

hw1/: CMakeLists.txt  convolution_2d.cl  main.cpp
hw2/: CMakeLists.txt  main.cpp  scan.cl
